Fix white arrow color and left spacing on big-banner button

--- a/assets/big-banner.css
+++ b/assets/big-banner.css
@@ -83,6 +83,13 @@ section[is="big-banner"] {
       border: none;
       transition: scale var(--duration-normal) var(--ease-bounce);
 
+      & .icon {
+        background-color: var(--color-white);
+        margin-inline-start: var(--space-2);
+        width: var(--space-2-5);
+        height: var(--space-2-5);
+      }
+
       &:hover { scale: 1.03; }
     }
 
